...
            "state" : "translated",
            "value" : "Дата изменения"
          }
        }
      }
    },
    "Delete" : {
      "comment" : "A button label that deletes an option.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Введите описание задачи"
          }
        }
      }
    },
    "Enter the issue title here" : {
      "comment" : "A placeholder text for the title field of an issue.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Введите название задачи"
          }
        }
      }
    },
    "Filter" : {
      "comment" : "A button label that, when tapped, presents a menu for filtering issues.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Фильтр задач"
          }
        }
      }
    },
    "Filters" : {
      "comment" : "The title of the filters section in the sidebar.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Фильтры"
          }
        }
      }
    },
    "High" : {
      "comment" : "A priority level for an issue.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Высокий приоритет"
          }
        }
      }
    },
    "Issues" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Issues"
...
            "state" : "translated",
            "value" : "Задачи"
          }
        }
      }
    },
    "Locked" : {
      "comment" : "Locked award",
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Заблокировано"
...
            "state" : "translated",
            "value" : "Новая задача"
          }
        }
      }
    },
    "New Issue" : {
      "comment" : "A button that navigates to the screen for creating a new issue.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Задача не выбрана"
          }
        }
      }
    },
    "OK" : {
      "comment" : "The label of a button that confirms a user's action.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Переименовать тег"
          }
        }
      }
    },
    "Show awards" : {
      "comment" : "A button to show an awards view.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
...
